# GLTF2

./: .gitignore  CMakeLists.txt  Package.swift  README.md
GLTF2/: CMakeLists.txt
GLTF2/include/: Errors.h  GLTF2.h  GLTFAccessor.h  GLTFAccessorSparse.h  GLTFAccessorSparseIndices.h  GLTFAccessorSparseValues.h  GLTFAnimation.h  GLTFAnimationChannel.h  GLTFAnimationChannelTarget.h  GLTFAnimationSampler.h  GLTFAsset.h  GLTFBinary.h  GLTFBuffer.h  GLTFBufferView.h  GLTFCamera.h  GLTFCameraOrthographic.h  GLTFCameraPerspective.h  GLTFData.h  GLTFDecoder.h  GLTFException.h  GLTFExtension.h  GLTFFile.h  GLTFImage.h  GLTFJSONAccessor.h  GLTFJSONAccessorSparse.h  GLTFJSONAccessorSparseIndices.h  GLTFJSONAccessorSparseValues.h  GLTFJSONAnimation.h  GLTFJSONAnimationChannel.h  GLTFJSONAnimationChannelTarget.h  GLTFJSONAnimationSampler.h  GLTFJSONAsset.h  GLTFJSONBuffer.h  GLTFJSONBufferView.h  GLTFJSONCamera.h  GLTFJSONCameraOrthographic.h  GLTFJSONCameraPerspective.h  GLTFJSONDecoder.h  GLTFJSONImage.h  GLTFJSONMaterial.h  (+35 more)
GLTF2/src/: Errors.m  Errors.mm  GLTFAccessor.m  GLTFAccessorSparse.m  GLTFAccessorSparseIndices.m  GLTFAccessorSparseValues.m  GLTFAnimation.m  GLTFAnimationChannel.m  GLTFAnimationChannelTarget.m  GLTFAnimationSampler.m  GLTFAsset.m  GLTFBinary.m  GLTFBuffer.m  GLTFBufferView.m  GLTFCamera.m  GLTFCameraOrthographic.m  GLTFCameraPerspective.m  GLTFData.cpp  GLTFData.m  GLTFData.mm  GLTFDecoder.m  GLTFDecoder.mm  GLTFExtension.cpp  GLTFFile.cpp  GLTFImage.m  GLTFJSONAccessor.m  GLTFJSONAccessorSparse.m  GLTFJSONAccessorSparseIndices.m  GLTFJSONAccessorSparseValues.m  GLTFJSONAnimation.m  GLTFJSONAnimationChannel.m  GLTFJSONAnimationChannelTarget.m  GLTFJSONAnimationSampler.m  GLTFJSONAsset.m  GLTFJSONBuffer.m  GLTFJSONBufferView.m  GLTFJSONCamera.m  GLTFJSONCameraOrthographic.m  GLTFJSONCameraPerspective.m  GLTFJSONDecoder.m  (+31 more)
GLTF2Core/: CMakeLists.txt
GLTF2Core/include/: GLTF2Core.h  GLTFData.h  GLTFException.h  GLTFExtension.h  GLTFJson.h  GLTFJsonDecoder.cpp  GLTFJsonDecoder.h
GLTF2Core/src/: GLTFData.cpp  GLTFExtension.cpp  GLTFJson.cpp  GLTFJsonDecoder.cpp
GLTF2Kit/: CMakeLists.txt
GLTF2Kit/include/: GLTF2Availability.h  GLTF2Kit.h  GLTFBinary.h  GLTFConstants.h  GLTFData.h  GLTFDecoder.h  GLTFJson.h
GLTF2Kit/src/: GLTFBinary.mm  GLTFConstants.mm  GLTFData.mm
GLTF2KitTests/: CMakeLists.txt  GLTFDataTests.mm  GLTFDecoderTests.mm
GLTF2SceneKit/: CMakeLists.txt
GLTF2SceneKit/include/: GLTF2Object+SceneKit.h  GLTF2SceneKit.h  GLTFData+SceneKit.h  GLTFJson.h  GLTFSCNAsset.h  JsonConverter.h  SceneKitUtil.h  SpringBoneJointState.h  SurfaceShaderModifierBuilder.h  VRMSCNAsset.h
GLTF2SceneKit/src/: GLTF2Object+SceneKit.m  GLTFData+SceneKit.m  GLTFError.mm  GLTFJson.mm  GLTFSCNAsset.m  GLTFSCNAsset.mm  JsonConverter.mm  SpringBoneJointState.mm  SurfaceShaderModifierBuilder.m  VRMSCNAsset.mm
GLTF2Tests/: CMakeLists.txt  GLTF2Tests.m  GLTFAccessorSparseIndicesTests.m  GLTFBinaryTests.m  GLTFBinaryTests.mm  GLTFDataTests.m  GLTFDataTests.mm  GLTFDecoderTests.m  GLTFModelTests.m  GLTFObjectTests.m  JsonDecoder_GLTF_test.cpp  JsonDecoder_MToon_test.cpp  JsonDecoder_SpringBone_test.cpp  JsonDecoder_VRM0_test.cpp  JsonDecoder_VRM1_test.cpp  config.h.in  gltf.json  mtoon.json  springbone.json  test.cpp  vrm0.json  vrm1.json
VRM/: CMakeLists.txt
core_test/: CMakeLists.txt  main.cpp  test.cpp
example/: AppDelegate.m  CMakeLists.txt  Info.plist.in  Main.storyboard  SCNViewController.h  SCNViewController.m  SidebarViewController.h  SidebarViewController.m  SidebarViewControllerDelegate.h  ViewController.h  ViewController.m  ViewController.mm  WindowController.h  WindowController.m  main.mm
sample-models/: .gitignore  CMakeLists.txt  simple_rect_trinagle.gltf  simple_rect_trinagle_fan.gltf
sample-models/a/: a.gltf
sample-models/primitive-modes/: simple_rect_line.gltf  simple_rect_line_loop.gltf  simple_rect_line_strip.gltf  simple_rect_points.gltf
