file(GLOB_RECURSE SOURCES "*.cpp")
add_executable(core_test ${SOURCES})

target_link_libraries(core_test GLTF2Core)

# target_include_directories(example PRIVATE
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${CMAKE_BINARY_DIR}
# )

set_target_properties(core_test PROPERTIES
#     RESOURCE "${APP_RESOURCES}"
#     BUILD_WITH_INSTALL_RPATH TRUE
#     INSTALL_RPATH @executable_path/../Frameworks
#     MACOSX_BUNDLE_INFO_PLIST ${INFO_PLIST_PATH}
#     XCODE_ATTRIBUTE_CLANG_ENABLE_OBJC_ARC YES
#     XCODE_ATTRIBUTE_INFOPLIST_FILE ${INFO_PLIST_PATH}
#     XCODE_EMBED_FRAMEWORKS GLTF2
#     XCODE_EMBED_FRAMEWORKS_CODE_SIGN_ON_COPY TRUE
#     XCODE_EMBED_FRAMEWORKS_REMOVE_HEADERS_ON_COPY TRUE
    XCODE_ATTRIBUTE_MACOSX_DEPLOYMENT_TARGET 11.0
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES
    ${SOURCES}
)
